apps/oxlint/src/snapshots/fixtures__ignore_pattern_non_glob_syntax_ .@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: 
working directory: fixtures/ignore_pattern_non_glob_syntax
----------
Found 0 warnings and 0 errors.
Finished in <variable>ms on 0 files using 1 threads.
----------
CLI result: LintSucceeded
----------

########## 
arguments: .
working directory: fixtures/ignore_pattern_non_glob_syntax
----------
Found 0 warnings and 0 errors.
Finished in <variable>ms on 0 files using 1 threads.
----------
CLI result: LintSucceeded
----------
