apps/oxlint/src/snapshots/fixtures__ignore_patterns_whitelist_ .@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: 
working directory: fixtures/ignore_patterns_whitelist
----------

  x ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\eslint(no-debugger)]8;;\: `debugger` statement is not allowed
   ,-[index.whitelist.ts:1:1]
 1 | debugger;
   : ^^^^^^^^^
   `----
  help: Remove the debugger statement

Found 0 warnings and 1 error.
╰ 1 fix is available with '--fix'
Finished in <variable>ms on 1 file using 1 threads.
----------
CLI result: LintFoundErrors
----------

########## 
arguments: .
working directory: fixtures/ignore_patterns_whitelist
----------

  x ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\eslint(no-debugger)]8;;\: `debugger` statement is not allowed
   ,-[index.whitelist.ts:1:1]
 1 | debugger;
   : ^^^^^^^^^
   `----
  help: Remove the debugger statement

Found 0 warnings and 1 error.
╰ 1 fix is available with '--fix'
Finished in <variable>ms on 1 file using 1 threads.
----------
CLI result: LintFoundErrors
----------
