apps/oxlint/src/snapshots/fixtures__invalid_config_enum_@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: 
working directory: fixtures/invalid_config_enum
----------
Failed to parse oxlint configuration file.

  x Invalid configuration for rule `no-return-assign`: unknown variant `foobar`, expected `always` or `except-parens`, received `"foobar"`
  | 

----------
CLI result: InvalidOptionConfig
----------
